<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Hotel">Отель</string>
    <string name="about_the_hotel">Об отеле</string>
    <string name="facilities">Удобства</string>
    <string name="essentials">Самое необходимое</string>
    <string name="what_is_included">Что включено</string>
    <string name="what_is_not_included">Что не включено</string>
    <string name="to_choose_a_number">К выбору номера</string>
</resources>