<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hotel_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/Theme.App.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hotel"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:layout_marginTop="16dp"
            android:autoStart="true"
            android:flipInterval="2000"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/hotel_img_1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                android:src="@drawable/hotel_img_1" />

        </ViewFlipper>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/stars_count_shape"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_flipper">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_star_rate_24" />

            <TextView
                android:id="@+id/rating"
                style="@style/Theme.App.Base.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFA800" />

        </LinearLayout>

        <TextView
            android:id="@+id/name"
            style="@style/Theme.App.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/address"
            style="@style/Theme.App.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#0D72FF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/minimalPrice"
            style="@style/Theme.App.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/priceForIt"
            style="@style/Theme.App.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#828796"
            app:layout_constraintBottom_toBottomOf="@+id/minimalPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toEndOf="@+id/minimalPrice"
            app:layout_constraintTop_toTopOf="@+id/minimalPrice"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            style="@style/Theme.App.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/about_the_hotel"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minimalPrice" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/peculiaritiesChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:chipSpacingVertical="-12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:singleLine="false" />

        <TextView
            android:id="@+id/description"
            style="@style/Theme.App.Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/peculiaritiesChipGroup" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:src="@drawable/emoji_happy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/Theme.App.Base.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facilities"
                    android:textColor="#2C3035" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/Theme.App.Base.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/essentials"
                    android:textColor="#828796"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingEnd="24dp"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#26000000"
                app:layout_constraintStart_toStartOf="@id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@id/linearLayout2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:src="@drawable/tick_square"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Theme.App.Base.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_included"
                    android:textColor="#2C3035" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/Theme.App.Base.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/essentials"
                    android:textColor="#828796"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="24dp"
                android:importantForAccessibility="no"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#26000000"
                app:layout_constraintStart_toStartOf="@id/linearLayout3"
                app:layout_constraintTop_toBottomOf="@id/linearLayout3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout2">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:src="@drawable/close_square"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView3"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView3"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/Theme.App.Base.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_not_included"
                    android:textColor="#2C3035" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/Theme.App.Base.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/essentials"
                    android:textColor="#828796"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="24dp"
                android:importantForAccessibility="no"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/linearLayout4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#26000000"
                app:layout_constraintStart_toStartOf="@id/linearLayout4"
                app:layout_constraintTop_toBottomOf="@id/linearLayout4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/choose_room_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/to_choose_a_number"
            android:textColor="#FFFFFF"
            app:backgroundTint="#FF0D72FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>